--- a/style/index.css
+++ b/style/index.css
@@ -115,6 +115,39 @@ ul{
     transition: all .2s;
 
 }
+#menu-produtos>ul li a{
+    display: block;
+    font-size: 1.5em;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    padding: 10px;
+
+    transition: all .2s;
+
+    
+}
+
+#menu-produtos>ul>li{
+    border-bottom: solid 1px #eee;
+}
+
+#menu-produtos>ul>li>a>img{
+
+    width: 35px;
+    height: 35px;
+    vertical-align: middle;
+    margin-right: 20px;
+}
+#menu-produtos>ul>li>a>i{
+    margin-top: 5px;
+    float: right;
+
+}
+#menu-produtos>ul li a:hover{
+    background-color: #eee;
+    color: #ff6a00;
+}
+
 .menu>ul li a:hover{
     background-color: #eee;
     color: #ff6a00;
